--- a/phylogene_app/templates/users/ajoutfichier.html
+++ b/phylogene_app/templates/users/ajoutfichier.html
@@ -18,7 +18,7 @@
             <p><h1>Django File Upload Save to Mysql Database</h1></p>
             <form method="POST" class="post-form" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form.as_p}}
+                    {{ formulaire.as_p}}
                 <button type="submit" class="btn btn-primary">Save</button>
             </form>
         </div>
