--- a/phylogene_app/templates/phylEntropy/navbar.html
+++ b/phylogene_app/templates/phylEntropy/navbar.html
@@ -7,8 +7,8 @@
 
         <ul class="navbar-nav mr-auto">
 
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'intro' %}"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'intro' %}"><i class="fa fa-home"></i> Home</a>
             </li>
 
             <li class="nav-item">
@@ -32,11 +32,19 @@
           <div class='col-md-5 w-auto ms-auto'>
               {% if user.is_authenticated %}
                   <div class="navbar-nav">
-                    Welcome <strong>&nbsp;{{ user.username }}</strong>
-                        <a class="nav-item nav-link" href="{% url 'logout' %}">
+                      {% comment %}<a class="nav-item nav-link" href="{% url 'listfiles' %}">
+                            <i class="fa fa-file"></i> liste des fichiers
+                      </a>{% endcomment %}
+                      <a class="nav-item nav-link" href="{% url 'adduserfile' %}">
+                            <i class="fa fa-file"></i> Ajout de fichier
+                      </a>
+                      <a class="nav-item nav-link" href="{% url 'profile' user.username %}">
+                            <i class="fa fa-user"></i> {{user.username}}
+                      </a>
+                      <a class="nav-item nav-link" href="{% url 'logout' %}">
                             <i class="fa fa-log-in"></i> Log out
-                        </a>
-                    </div>
+                      </a>
+                  </div>
               {% else %}
                   {% comment %}<button class="btn btn-link my-2 my-sm-0" type="submit">Sign in</button>
                   <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Sign up</button>{% endcomment %}
