nouvelle bar de navigation

--- a/phylogene_app/templates/phylEntropy/base.html
+++ b/phylogene_app/templates/phylEntropy/base.html
@@ -15,9 +15,8 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.10.13/se-1.2.0/datatables.min.css">
   <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
-{% comment %}
   <link rel="stylesheet" href="../static/css/phylotree.css">
-{% endcomment %}
+
 
   {% endblock %}
   <title>phylEntropy</title>
@@ -30,138 +29,109 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color: #e3f2fd;">
-            <a class="navbar-brand" href="#">phylEntropy</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav mr-auto">
+    {% include 'phylEntropy/navbar.html' %}
 
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'intro' %}"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span></a>
-                </li>
+      <div class="container-fluid" style="background-color: #ffffff;">
 
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'aboutphylentropy' %}">About Phylentropy</a>
-                </li>
-
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'phylogene_import' %}"><i class='fa fa-cog'></i> Analysis</a>
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'links' %}"><i class='fa fa-paperclip'></i> Links</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'credits' %}"><i class="fa fa-book"></i> Credits</a>
-                </li>
-              </ul>
+        <!--BANDEAU -->
+        <div class="container" style="background-color: #ffffff;">
+          <a href="http://www.pasteur-guadeloupe.fr/karubionet.html" target="_blank" col></a>
+            <div class="col-lg-4" style="float:none;margin:auto;">
+              <div class="d-flex flex-column text-center height100">
+                <div>
+                  </br>
+                  </br>
+                  <img src="../../static/img/LogoSample_ByTailorBrands.jpg" class="rounded" height="150" width="150"/>
+                </div>
+              </div>
             </div>
-        </nav>
+            {% block content %}
+            {% endblock %}
 
-  <div class="container-fluid" style="background-color: #ffffff;">
+            {% comment %}<script>
+              function openNav() {
+                document.getElementById("mySidenav").style.width = "250px";
+                document.getElementById("main").style.marginRight = "250px";
+              }
 
-    <!--BANDEAU -->
-    <div class="container" style="background-color: #ffffff;">
-      <a href="http://www.pasteur-guadeloupe.fr/karubionet.html" target="_blank" col></a>
-        <div class="col-lg-4" style="float:none;margin:auto;">
-          <div class="d-flex flex-column text-center height100">
-            <div>
-              </br>
-              </br>
-              <img src="../../static/img/LogoSample_ByTailorBrands.jpg" class="rounded" height="150" width="150"/>
-            </div>
-          </div>
+              function closeNav() {
+                document.getElementById("mySidenav").style.width = "0";
+                document.getElementById("main").style.marginRight = "0";
+              }
+
+            </script>{% endcomment %}
+
+
+        {% comment %}
+              <footer>
+                <table class="footer" width="100%" style="margin-top: 1em;">
+
+
+                <tr>
+
+                  <td width="37%">
+                    <div id="info"><i>Copyright &copy; 2022, <a href="http://web.pasteur-guadeloupe.fr/"
+                          target="_blank">Institut Pasteur de la Guadeloupe</a>. All rights reserved. </i> </div>
+                  </td>
+                  <td height="21" colspan="2">
+                    <div id="info" >You can also follow us on <a
+                        href="https://www.facebook.com/Institut.Pasteur.Guadeloupe/" target="_blank">Facebook</a></div>
+                  </td>
+                </tr>
+                <!-- <tr>
+                          <td height="21" colspan="2">&nbsp;</td>
+                          <td width="37%"><div id="info" align="right"><a href="mailto:tburguiere@pasteur-guadeloupe.fr">Thomas Burguiere</a> &nbsp; <a href="mailto:dcouvin@pasteur-guadeloupe.fr">David Couvin</a> </div></td>
+                        </tr>-->
+
+                <tr>
+                  <td height="21" colspan="3">
+                    <hr>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td width="50%" height="46">Portions of this page are reproduced from work created and <a
+                      href="https://google-developers.appspot.com/site-policies" target="_blank">shared by Google</a> and used
+                    according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/"
+                      target="_blank">Creative Commons 3.0 Attribution License</a>.</td>
+                  <!--<a href="http://validator.w3.org/check?uri=referer" target="_blank">
+                    <img src="http://www.w3.org/Icons/valid-html401" alt="w3c" width="88" height="31" border="0" longdesc="http://validator.w3.org/check?uri=referer" >	</a></td>-->
+                  <td>
+                    <div>version &#946; 2.0 </div>
+                  </td>
+                  <td width="50%">
+                    <div><em>This site uses </em>&nbsp;
+                      <a href="https://www.djangoproject.com/" target="_blank">
+                        <img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
+                      <a href="https://getbootstrap.com/" target="_blank">
+                        <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                      <a href="https://www.python.org/" target="_blank">
+                        <img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                    </div>
+                  </td>
+                </tr>
+
+              </table>
+            </footer>
+        {% endcomment %}
+
+
         </div>
-    {% block content %}
-    {% endblock %}
+      </div>
+      {%block javascripts %}
+      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.datatables.net/v/dt/dt-1.10.13/se-1.2.0/datatables.min.js"></script>
 
-    <script>
-      function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-        document.getElementById("main").style.marginRight = "250px";
-      }
+      <script>
+        $('.toggle').on('click', function () {
+          $('.menu').toggleClass('active');
+        });
+      </script>
 
-      function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-        document.getElementById("main").style.marginRight = "0";
-      }
-
-    </script>
-
-
-{% comment %}
-      <footer>
-        <table class="footer" width="100%" style="margin-top: 1em;">
-      
-
-        <tr>
-
-          <td width="37%">
-            <div id="info"><i>Copyright &copy; 2022, <a href="http://web.pasteur-guadeloupe.fr/"
-                  target="_blank">Institut Pasteur de la Guadeloupe</a>. All rights reserved. </i> </div>
-          </td>
-          <td height="21" colspan="2">
-            <div id="info" >You can also follow us on <a
-                href="https://www.facebook.com/Institut.Pasteur.Guadeloupe/" target="_blank">Facebook</a></div>
-          </td>
-        </tr>
-        <!-- <tr>
-                  <td height="21" colspan="2">&nbsp;</td>
-                  <td width="37%"><div id="info" align="right"><a href="mailto:tburguiere@pasteur-guadeloupe.fr">Thomas Burguiere</a> &nbsp; <a href="mailto:dcouvin@pasteur-guadeloupe.fr">David Couvin</a> </div></td>
-                </tr>-->
-
-        <tr>
-          <td height="21" colspan="3">
-            <hr>
-          </td>
-        </tr>
-
-        <tr>
-          <td width="50%" height="46">Portions of this page are reproduced from work created and <a
-              href="https://google-developers.appspot.com/site-policies" target="_blank">shared by Google</a> and used
-            according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/"
-              target="_blank">Creative Commons 3.0 Attribution License</a>.</td>
-          <!--<a href="http://validator.w3.org/check?uri=referer" target="_blank">
-            <img src="http://www.w3.org/Icons/valid-html401" alt="w3c" width="88" height="31" border="0" longdesc="http://validator.w3.org/check?uri=referer" >	</a></td>-->
-          <td>
-            <div>version &#946; 2.0 </div>
-          </td>
-          <td width="50%">
-            <div><em>This site uses </em>&nbsp;
-              <a href="https://www.djangoproject.com/" target="_blank">
-                <img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
-              <a href="https://getbootstrap.com/" target="_blank">
-                <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
-              <a href="https://www.python.org/" target="_blank">
-                <img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
-            </div>
-          </td>
-        </tr>
-
-      </table>
-    </footer>
-{% endcomment %}
-
-
-  </div>
-  </div>
-  {%block javascripts %}
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.datatables.net/v/dt/dt-1.10.13/se-1.2.0/datatables.min.js"></script>
-
-  <script>
-    $('.toggle').on('click', function () {
-      $('.menu').toggleClass('active');
-    });
-  </script>
-
-  {% endblock %}
+      {% endblock %}
 </body>
 
 </html>
