--- a/phylogene_app/templates/phylEntropy/about.html
+++ b/phylogene_app/templates/phylEntropy/about.html
@@ -22,40 +22,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="#">phylEntropy</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'intro' %}"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span></a>
-        </li>
-
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'aboutphylentropy' %}">About Phylentropy</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'phylogene_import' %}"><i class='fa fa-cog'></i> Analysis</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'links' %}"><i class='fa fa-paperclip'></i> Links</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'credits' %}"><i class="fa fa-book"></i> Credits</a>
-        </li>
-      </ul>
-      <!-- <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
-    </div>
-</nav>
+    {% include 'phylEntropy/navbar.html' %}
 
 <div class="container" id="aboutcontainer" style="background-color: #ffffff;">
     <a href="http://www.pasteur-guadeloupe.fr/karubionet.html" target="_blank" col></a>
