--- a/phylogene_app/templates/phylEntropy/credits.html
+++ b/phylogene_app/templates/phylEntropy/credits.html
@@ -22,36 +22,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="#">phylEntropy</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'intro' %}"><i class="fa fa-home"></i> Home<span class="sr-only">(current)</span></a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'aboutphylentropy' %}">About Phylentropy</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'phylogene_import' %}"><i class='fa fa-cog'></i> Analysis</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'links' %}"><i class='fa fa-paperclip'></i> Links</a>
-        </li>
-
-        <li class="nav-item active">
-            <a class="nav-link" href="{% url 'credits' %}"><i class="fa fa-book"></i> Credits</a>
-        </li>
-      </ul>
-    </div>
-</nav>
+    {% include 'phylEntropy/navbar.html' %}
 
 <div class="container" id="creditscontainer" style="background-color: #ffffff;">
     <div class="col-lg-12" style="padding-top: 70px;">
