--- a/phylogene_app/templates/users/logout.html
+++ b/phylogene_app/templates/users/logout.html
@@ -2,6 +2,7 @@
 {% extends "main/header.html" %}
 {% endcomment %}
 {% block content %}
+        {% include 'phylEntropy/navbar.html' %}
     <h2>You have been logged out</h2>
     <div class="border-top pt-3"  style="min-height:65vh;">
         <small class="text-muted">
