suppression phylotree.cs + modif script plotly

--- a/phylogene_app/templates/graph/neighbor_joining2.html
+++ b/phylogene_app/templates/graph/neighbor_joining2.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 {{block.super}}
-<link rel="stylesheet" href="{% static 'css/phylotree.css.tmp' %}">
+{% comment %}<link rel="stylesheet" href="{% static 'css/phylotree.css.tmp' %}">{% endcomment %}
 {% endblock %}
 
 {% block content %}
