--- a/phylogene_app/templates/graph/upgma2.html
+++ b/phylogene_app/templates/graph/upgma2.html
@@ -3,7 +3,9 @@
 
 {% block head %}
 {{block.super}}
+{% comment %}
 <link rel="stylesheet" href="{% static 'css/phylotree.css.tmp' %}">
+{% endcomment %}
 {% endblock %}
 
 {% block content %}
