--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -10,7 +10,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 {% comment %}
-        <link rel="stylesheet" href="../static/css/phylotree.css">
+        <link rel="stylesheet" href="../static/css/phylotree.css.tmp">
 {% endcomment %}
         {% endblock %}
         <title>phylEntropy</title>
