--- a/phylogene_app/templates/phylEntropy/import_data.html
+++ b/phylogene_app/templates/phylEntropy/import_data.html
@@ -207,7 +207,6 @@
                         <div class="tab-pane fade" id="metrics">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, "metrics_example.csv" or "machinelearning_example_file.csv"  then click on Select All > the option you want to use.</p>
-                            <input id="submit6" name="pca"   class="btn btn-primary" type="submit" value="PCA" onclick="this.form.submited=this.value;" >
                             <input id="submit7" name="Entropy"   class="btn btn-primary" type="submit" value="Entropy" onclick="this.form.submited=this.value;" >
                             <input id="submit9" name="Hunter-Gaston"   class="btn btn-primary" type="submit" value="Hunter-Gaston" onclick="this.form.submited=this.value;" >
                             <input id="submit10" name="Shannon-Entropy"   class="btn btn-primary" type="submit" value="Shannon-Entropy" onclick="this.form.submited=this.value;" >
@@ -233,6 +232,7 @@
                                 Unsupervized Learning
                                 </button>
                                 <div class="dropdown-menu">
+                                    <input id="submit6" name="pca" type="submit" value="PCA" onclick="this.form.submited=this.value;" >
                                     <input id="submit19" name="h_clust" type="submit" value="h_clust" onclick="this.form.submited=this.value;" >
                                     <input id="submit20" name="k_means" type="submit" value="k_means" onclick="this.form.submited=this.value;" >
                                     <input id="submit21" name="clustermap" type="submit" value="clustermap" onclick="this.form.submited=this.value;" >
