mise à jour du style des pages

--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="../static/css/phylotree.css.tmp">
 {% endcomment %}
         {% endblock %}
-        <title>phylEntropy</title>
+        <title>Home</title>
 
         <style>
             h1 {
