--- a/phylogene_app/templates/phylEntropy/import_data.html
+++ b/phylogene_app/templates/phylEntropy/import_data.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 {% extends 'phylEntropy/base.html' %}
 {% block content %}
+<head>
+  <title>Analysis</title>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -13,8 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 
-
-
+</head>
 <div class="container" style="margin-bottom: 1em;">
     <div style="margin-top: 1em;">
         <div class="row form-group" id="inputDataSample">
@@ -178,13 +180,19 @@
                         <li class="nav-item">
                             <a href="#machinelearning" class="nav-link" data-bs-toggle="tab">Machine Learning</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="#genomics" class="nav-link" data-bs-toggle="tab">Genomics</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#fuzzylogic" class="nav-link" data-bs-toggle="tab">Fuzzy Logic</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="card-body">
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="graph">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">To test, use "graph_example.csv" then click on Select All > the option you want to use.</p>
+                            <p class="card-text">To test, use "exemple2.csv" then click on Select All > Store Value > the option you want to use.</p>
                             <input id="submit1" name="kruskal" class="btn btn-primary" type="submit" value="Minimun Spanning Tree" onclick="this.form.submited=this.value;" >
                             <input id="submit2" name="upgma"   class="btn btn-primary" type="submit" value="UPGMA" onclick="this.form.submited=this.value;" >
                             <input id="submit3" name="neighbor-joining"   class="btn btn-primary" type="submit" value="Neighbor-Joining" onclick="this.form.submited=this.value;" >
@@ -194,19 +202,19 @@
                         </div>
                         <div class="tab-pane fade" id="statistics">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">To test, any file of the list will work... click on Select All then uncheck "ID", "Type" and "Location" > the option you want to use.</p>
+                            <p class="card-text">To test, use "exemple2.csv" then click on Select All then uncheck "ID", "Type" and "Location" > the option you want to use.</p>
                             <input id="submit4" name="boxplot"   class="btn btn-primary" type="submit" value="Boxplot" onclick="this.form.submited=this.value;" >
                             <input id="submit5" name="heatmap"   class="btn btn-primary" type="submit" value="Heatmap" onclick="this.form.submited=this.value;" >
                         </div>
                         <div class="tab-pane fade" id="maps">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">To test, use "maps_example.csv" then click on Select All > Store Value > the option you want to use.</p>
+                            <p class="card-text">To test, use "exemple2.csv" then click on Select All > Store Value > the option you want to use.</p>
                             <input id="submit8" name="Global Map"   class="btn btn-primary" type="submit" value="Global Map" onclick="this.form.submited=this.value;" >
-                            <input id="submit11" name="Global City Map"   class="btn btn-primary" type="submit" value="Global City Map" onclick="this.form.submited=this.value;" >
+                            <input id="submit11" name="Global City Map"   class="btn btn-primary" type="submit" value="Global City Map" onclick="this.form.submited=this.value;" hidden="hidden">
                         </div>
                         <div class="tab-pane fade" id="metrics">
                             <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">To test, "metrics_example.csv" or "machinelearning_example_file.csv"  then click on Select All > the option you want to use.</p>
+                            <p class="card-text">To test, "exemple2.csv" or "spol43.csv"  then click on Select All > the option you want to use.</p>
                             <input id="submit7" name="Entropy"   class="btn btn-primary" type="submit" value="Entropy" onclick="this.form.submited=this.value;" >
                             <input id="submit9" name="Hunter-Gaston"   class="btn btn-primary" type="submit" value="Hunter-Gaston" onclick="this.form.submited=this.value;" >
                             <input id="submit10" name="Shannon-Entropy"   class="btn btn-primary" type="submit" value="Shannon-Entropy" onclick="this.form.submited=this.value;" >
@@ -239,6 +247,17 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="tab-pane fade" id="genomics">
+                            <h5 class="card-title">Instructions about how to launch</h5>
+                            <p class="card-text">To test, "metrics_example.csv" or "machinelearning_example_file.csv"  then click on Select All > the option you want to use.</p>
+                            <input id="submit22" name="pyGenomeViz"   class="btn btn-primary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
+                            <input id="submit23" name="pyCircos"   class="btn btn-primary" type="submit" value="pyCircos" onclick="this.form.submited=this.value;" >
+                       </div>
+                        <div class="tab-pane fade" id="fuzzylogic">
+                            <h5 class="card-title">Instructions about how to launch</h5>
+                            <p class="card-text">To test, "metrics_example.csv" or "machinelearning_example_file.csv"  then click on Select All > the option you want to use.</p>
+                            <input id="submit24" name="FuzzyWuzzy"   class="btn btn-primary" type="submit" value="FuzzyWuzzy" onclick="this.form.submited=this.value;" >
+                       </div>
                     </div>
                 </div>
             </div>
