--- a/phylogene_app/templates/users/ajoutfichier.html
+++ b/phylogene_app/templates/users/ajoutfichier.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
 <head>
-<title>Django File Upload - cairocoders</title>
+<title>Add files</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="{% static 'users/css/users.css' %}">
@@ -9,10 +9,19 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+        <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
+    </head>
 <body>
     {% include 'phylEntropy/navbar.html' %}
 
-<div class="container" style="padding:20px;">
+<div class="container" style="padding-top: 70px;">
     <div class="row">
         <div class="col-12">
             <p><h1>Django File Upload Save to Mysql Database</h1></p>
