--- a/phylogene_app/templates/users/logout.html
+++ b/phylogene_app/templates/users/logout.html
@@ -2,14 +2,32 @@
 {% extends "main/header.html" %}
 {% endcomment %}
 {% block content %}
+    <head>
+          <title>Logout</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+        <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
+    </head>
         {% include 'phylEntropy/navbar.html' %}
-    <h2>You have been logged out</h2>
-    <div class="border-top pt-3"  style="min-height:65vh;">
-        <small class="text-muted">
-            <a href="{% url 'login' %}">Log In Again</a>
-        </small>
-        <small class="text-muted">
-            <a href="/">Home</a>
-        </small>
+
+<div class="container" style="padding-top: 70px;">
+    <div class="row">
+        <div class="col-12">
+            <h2>You have been logged out</h2>
+
+            <small class="text-muted">
+                <a href="{% url 'login' %}">Log In Again</a>
+            </small>
+
+            <small class="text-muted">
+                <a href="/">Home</a>
+            </small>
+        </div>
     </div>
+</div>
+
 {% endblock content %}
