--- a/phylogene_app/templates/users/register.html
+++ b/phylogene_app/templates/users/register.html
@@ -3,6 +3,14 @@
 {% endcomment %}
 {% load crispy_forms_tags %}
 {% block content %}
+    <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+        <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
+    </head>
         {% include 'phylEntropy/navbar.html' %}
 
     <div class="content-section">
