--- a/phylogene_app/templates/phylEntropy/import_data.html
+++ b/phylogene_app/templates/phylEntropy/import_data.html
@@ -39,12 +39,8 @@
 
                             <label for="csv_file2">Test csv files : </label>
                                 <select id="inputDataSampleSelect" name="csv_file2">
-                                    <option value="graph_example.csv">graph_example.csv</option>
                                     <option value="exemple_2.csv">exemple2.csv</option>
-                                    <option value="maps_example.csv">maps_example.csv</option>
-                                    <option value="metrics_example.csv">metrics_example.csv</option>
                                     <option value="machinelearning_example_file.csv">machinelearning_example_file.csv</option>
-                                    <option value="phylentropy_exemple2.csv">phylentropy_exemple2.csv</option>
                                     <option value="spol43.csv">spol43.csv</option>
                                 </select>
                                 <input name="import" type="button" class="btn btn-primary" id="inputDataSampleDownload" value="Download File"/>
@@ -63,7 +59,7 @@
         // on click on example download, call Home controller DownloadFile action
 		$("#inputDataSampleDownload").on('click', function() {
 			if ($("#inputDataSampleSelect option:selected" ).text().length > 0) {
-				window.location.href = "../static/upload/FILENAME".replace("FILENAME", $("#inputDataSampleSelect option:selected" ).text());
+				window.location.href = "../static/FILENAME".replace("FILENAME", $("#inputDataSampleSelect option:selected" ).text());
 			}else{
 					alert("Sample file not found");
 			}
@@ -166,7 +162,10 @@
                     Choose an analysis option
                     <ul class="nav nav-tabs card-header-tabs" id="myTab">
                         <li class="nav-item">
-                            <a href="#graph" class="nav-link active" data-bs-toggle="tab">Graph</a>
+                            <a href="#genomics" class="nav-link active" data-bs-toggle="tab">Genomics</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#graph" class="nav-link" data-bs-toggle="tab">Graph</a>
                         </li>
                         <li class="nav-item">
                             <a href="#statistics" class="nav-link" data-bs-toggle="tab">Statistics</a>
@@ -181,15 +180,18 @@
                             <a href="#machinelearning" class="nav-link" data-bs-toggle="tab">Machine Learning</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#genomics" class="nav-link" data-bs-toggle="tab">Genomics</a>
-                        </li>
-                        <li class="nav-item">
                             <a href="#fuzzylogic" class="nav-link" data-bs-toggle="tab">Fuzzy Logic</a>
                         </li>
                     </ul>
                 </div>
                 <div class="card-body">
                     <div class="tab-content">
+                        <div class="tab-pane fade" id="genomics">
+                            <h5 class="card-title">Instructions about how to launch</h5>
+                            <p class="card-text">To test, "gene.csv" or "pyge.csv" then click on Select All > the option you want to use.</p>
+                            <input id="submit22" name="pyGenomeViz"   class="btn btn-primary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
+                            <input id="submit23" name="pyCircos"   class="btn btn-primary" type="submit" value="pyCircos" onclick="this.form.submited=this.value;" >
+                       </div>
                         <div class="tab-pane fade show active" id="graph">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, use "exemple2.csv" then click on Select All > Store Value > the option you want to use.</p>
@@ -247,12 +249,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="genomics">
-                            <h5 class="card-title">Instructions about how to launch</h5>
-                            <p class="card-text">To test, "metrics_example.csv" or "machinelearning_example_file.csv"  then click on Select All > the option you want to use.</p>
-                            <input id="submit22" name="pyGenomeViz"   class="btn btn-primary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
-                            <input id="submit23" name="pyCircos"   class="btn btn-primary" type="submit" value="pyCircos" onclick="this.form.submited=this.value;" >
-                       </div>
                         <div class="tab-pane fade" id="fuzzylogic">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, "metrics_example.csv" or "machinelearning_example_file.csv"  then click on Select All > the option you want to use.</p>
