--- a/phylogene_app/templates/users/register.html
+++ b/phylogene_app/templates/users/register.html
@@ -4,6 +4,8 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <head>
+        <title>Sign Up</title>
+
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
         <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
