--- a/phylogene_app/templates/metrics/Hunter-Gaston.html
+++ b/phylogene_app/templates/metrics/Hunter-Gaston.html
@@ -139,7 +139,8 @@
                 var tr = "<tr>";
                 tr += "<td>" + nameList[i + 1] + "</td>" + "<td>" + hdgi2[i] + "</td></tr>";
                 tbody.innerHTML += tr;
-              }</script>
+              }
+            </script>
           </table>
         </form>
       </div>
