--- a/phylogene_app/templates/phylEntropy/credits.html
+++ b/phylogene_app/templates/phylEntropy/credits.html
@@ -30,7 +30,7 @@
         <br/>
         <div id="info">
                     <p><b>Supervisor &amp; Web Content Manager:</b> <a href="mailto:dcouvin@pasteur-guadeloupe.fr">David COUVIN</a></p>
-                    <p><b>Validation &amp; Development:</b> <a>Davy REGALADE</a>, <a href="mailto:dcazenave@pasteur-guadeloupe.fr">Damien CAZENAVE</a> &amp <a>Vincent MOCCO</a> </p>
+                    <p><b>Validation &amp; Development:</b> <a>Davy REGALADE</a>, <a href="mailto:dcazenave@pasteur-guadeloupe.fr">Damien CAZENAVE</a> &amp <a>Vincent MOCO</a> </p>
         </div><br/>
     </div>
 </div>
